[package]
name    = "particle_filter"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra    = "0.32.2"  # linear algebra library 
rand        = "0.8.5"   # random number generator library
rand_distr  = "0.4.3"   # fast sampling from common distributions
gif         = "0.12.0"  # library for encoding images to gif 
lazy_static = "1.4.0"   # lazy initialization of static globals (should use once_cell in the future) 
special     = "0.10.2"  # useful to special (mathematical) functions
itertools   = "0.10.5"  # using it to sort list in a functional style 

[[bin]]
name = "particle_filter"
path = "src/main.rs"

